--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/home_dev_bg.jpeg
+    - assets/images/myself.jpg
+    - assets/images/wallstreet.png
+    - assets/images/folx.png
+    - assets/images/whats_easy.png
+    - assets/images/plugins.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
