--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  url_launcher: ^6.0.6
+  flutter_icons:
+    git:
+      url: https://github.com/adarsh-technocrat/flutter-icons.git
+      branch: null-safety-migration
 
 
   # The following adds the Cupertino Icons font to your application.
