--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.1.0
   url_launcher: ^6.0.6
+  url_launcher_web: ^2.0.1
+  universal_io: ^2.0.4
+  universal_html: ^2.0.8
   flutter_icons:
     git:
       url: https://github.com/adarsh-technocrat/flutter-icons.git
